force-app/main/default/objects/Contact/fields/Vest_Size__c.field-meta.xml
<CustomField>
    <fullName>Vest_Size__c</fullName>
    <label>Vest Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>