force-app/main/default/objects/Contact/fields/VID__c.field-meta.xml
<CustomField>
    <fullName>VID__c</fullName>
    <description>Auto-incrementing field added by Galvantrix. Purpose unknown.</description>
    <displayFormat>V{000000}</displayFormat>
    <inlineHelpText>Volunteer ID</inlineHelpText>
    <label>Volunteer ID (Salesforce)</label>
    <type>AutoNumber</type>
</CustomField>