force-app/main/default/objects/Contact/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the Volunteer Accepted Date is not blank</inlineHelpText>
    <label>Volunteer</label>
    <type>Checkbox</type>
</CustomField>