force-app/main/default/objects/Contact/fields/Volunteer_accepted_date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_accepted_date__c</fullName>
    <label>Volunteer accepted date</label>
    <type>Date</type>
</CustomField>