force-app/main/default/objects/Contact/fields/Volunteer_Availability_Timings__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Availability_Timings__c</fullName>
    <label>Volunteer Availability - Timings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>