force-app/main/default/objects/Contact/fields/Volunteer_Last_Web_signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Last_Web_signup_Date__c</fullName>
    <label>Volunteer Last Web signup Date</label>
    <type>DateTime</type>
</CustomField>