force-app/main/default/objects/Contact/fields/Volunteer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Notes__c</fullName>
    <label>Volunteer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>