force-app/main/default/objects/Contact/fields/Volunteer_Since__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Since__c</fullName>
    <label>Volunteer Since</label>
    <type>Date</type>
</CustomField>