force-app/main/default/objects/Contact/fields/Volunteered_hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteered_hours__c</fullName>
    <label>Volunteered hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>