force-app/main/default/objects/Contact/fields/Volunteering_area_s_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Volunteering_area_s_of_interest__c</fullName>
    <label>Volunteering area(s) of interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Art and Craft</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Dance and Music</fullName>
            </value>
            <value>
                <fullName>Graphics Design</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Photograhy</fullName>
            </value>
            <value>
                <fullName>Playing Musical Instrument</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Others (please specify below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>