force-app/main/default/objects/Contact/fields/VolunteerRating__c.field-meta.xml
<CustomField>
    <fullName>VolunteerRating__c</fullName>
    <label>Volunteer Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>