force-app/main/default/objects/Contact/fields/Written_Languages__c.field-meta.xml
<CustomField>
    <fullName>Written_Languages__c</fullName>
    <label>Written Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Malay</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Myanmarese</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Others (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>