force-app/main/default/objects/Contact/fields/Written_Languages_If_Others__c.field-meta.xml
<CustomField>
    <fullName>Written_Languages_If_Others__c</fullName>
    <label>Written Languages (If Others)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>