force-app/main/default/objects/Contact/validationRules/EmailRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailRequired</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Email )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please set the Email address.</errorMessage>
</ValidationRule>