force-app/main/default/objects/Contact/validationRules/Validation_for_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_DOB</fullName>
    <active>false</active>
    <errorConditionFormula>((TODAY() - Birthdate ) / 365.2425) &lt; 0</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Please enter valid DOB</errorMessage>
</ValidationRule>