force-app/main/default/objects/Contact/listViews/All_Accepted_Volunteers.listView-meta.xml
<ListView>
    <fullName>All_Accepted_Volunteers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Volunteer__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Volunteer_Activity_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Volunteer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Volunteer_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>All Accepted Volunteers</label>
</ListView>