force-app/main/default/objects/Contact/listViews/ISS_Clients.listView-meta.xml
<ListView>
    <fullName>ISS_Clients</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>FULL_NAME</columns>
    <columns>Gender__c</columns>
    <columns>ID_No__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Donor__c</columns>
    <columns>Volunteer__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Client</value>
    </filters>
    <label>ISS - Clients</label>
</ListView>