force-app/main/default/objects/Contact/listViews/New_Sign_Up_Today.listView-meta.xml
<ListView>
    <fullName>New_Sign_Up_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Volunteer__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Volunteer_Activity_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>New Sign Up Today</label>
</ListView>